1.04/README.md
# 327 Pokemon Game README - Gannon Guess

## Version 1.04
This version adds Trainer movement. A number of trainers (or actors) chosen by the user or by default (10) are generated and placed into a trainer map. The map is then used to calculate where the trainers will move. The screen is updated every time the player takes its turn. Hikers and Rivals are the actors added in this version.
- Trees now represented by `4`
- Player does not move in this version, so the screen updates whenever its designated movement time would have been
- Actors are generated by the user using a switch `./game --numtrainers <num>`. Otherwise the number of trainers is 10
  - Invalid input by the user will throw an error and the program will end
  - A value of trainers greater than 75 will also throw an error telling the user it will be a bad experience.
- Generated actors cannot spawn on another actor, a gate, or terrain they cannot traverse
- Generated actors are added to an actorMap at the location of their existance
- Dijkstra's algorithm now returns a distance map, storing the values for long-term use
- After generation, program enters the movement loop, where actors move indefinitely until the program is stopped with `Ctrl-C`
- The movement loop creates a heap, storing the values of actors' move time
- An array of actor_time_t structs is used to store smaller copies of the actors that go into the heap
  - this will hopefully be updated to an array of regular actors in a future version
- The actor with the smallest current time value is removed from the heap, and its movement is calculated
  - Uses distanceMap from dijkstra output, the current time, and the actor map to find where actor will move
  - Actor will move to the smallest cost cell near to it, prioritizing down and right. 
    - This can lead to weird looking pathing, but it is correct. Will hopefully prioritize randomly in a future update
  - After calculating a valid cell the actor will move to, the actorMap is updated to reflect its new location and the actor's cost is updated before it is inserted back into the heap
  - If the selected actor is the player, its time is updated without moving and the map with all recent movements is printed


## Version 1.03
This version adds Player Character placement and NPC movement cost map calculations for the Hiker and Rival type NPCs. Cost
maps are generated for each NPC type and displayed below the current room on output.
- First added the placement of a player character on a random path tile of a room when it is generated
- Player location, room, and NPC type are passed into dijkstra algorithm for calculating a cost map using the heap provided by instructor
- Heap is initilized and the players' location node is passed in to the queue with a value of 0. All other nodes are given a value of INT_MAX
- The lowest cost node of the heap is removed and the neighbors costs are calculated using the removed nodes cost + the cost of the removed nodes type.
   - The removed (center) nodes type cost is calculated using the passed in NPC type and the removed nodes terrain type
- Node cost is updated if the calculated cost is less than the current cost. The updated nodes are then added to the heap.
- If the NPC cannot traverse the terrain of the removed node, that node is skipped
   - Node is skipped if the new cost is negative, meaning the cost overflowed INT_MAX
   - Node is skipped if at the edge of the room so that the borders and gates cannot be traversed
- This process continues until all nodes are removed from the heap
- Finally, the dijkstra algorithm prints the cost maps for the NPC type provided
- This is run for both the Hiker and Rival types every time a room is visited

## Version 1.02
This version creates a world map, saving the grids greated in the previous version so that they can be reaccessed 
and eventual player movement can be implemeted. For now, room by room movent is allowed using various commands
- A world map (401x401) is initilized for storing pointers to rooms. The center room (internally [200, 200]) acts as the starting
  point for our adventure.
- Commands (n, s, e, w, f, q) allow for interaction with the map rooms. n, s, e, and, w provide cardinal movements
  between rooms. `f <x, y>` will transport the user to the room located at (x, y), with (0, 0) being the original room (ex. [-200, 0] would be the top left corner of the map). `q` will quit the game.
   - Errors should be thrown and the current room redisplayed if the input command does not align with any of the preceeding
- Rooms are generated as they are entered and are saved to the world map. If the player is at the edge of the map, the rooms will
  not have gates on the side with the world border. All gates of a room should align with the gates of its neighbors.
- Should the user try to move off the edge of the map, the current room will be displayed again with an error message.
- The current rooms coordinates are displayed below the room itself.
- Marts and Centers have a lower likelihood of appearing the farther from the origin (0, 0) the player travels, based on the 
  Manhattan Distance of the player. The chance deacreases to a flat rate of 5% at distances > 200

## Version 1.01
This version generates a grid "room" (21 x 80) of terrain that will be used for game areas
in future updates.
- Terrain is generated in rectangles of random size which may or may not overlap. This happens infrequenly
enough.
- 3-12 trees are generated for every room, and may or may not be overridden by paths, water, and buildings
- Paths are generated by choosing a random turning point part way through, so they are not all straight to the border, and then left or right.
- Centers and Marts are 2x2 buildings that are generated to connect to, most often times, the nearest path